tests/__snapshots__/validation-tsconfig-inline-config-error.snap.txt
Error: ',' expected. ts(1005)

  1 | {"extends":"./tsconfig.json","compilerOptions":{"lib":["es2020"}}
    |                                                                ~

      at ./<<synthetic>>.tsconfig.json:1:64

